# crypto

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  prd.md  prd_补充.md  pyproject.toml  trade_policy.md  交易逻辑优化.md
app/: __init__.py
docs/: BACKTEST_OPTIMIZATION_REPORT_2026-06-22.md  BACKTEST_OPTIMIZATION_REPORT_2026-06-23.md  DECISIONS.md  HANDOFF.md  PROJECT_CONTEXT.md  STRATEGY_TRIGGER_CONDITION_ANALYSIS_2026-06-23.md  STRATEGY_TRIGGER_OPTIMIZATION_REPORT_2026-06-23.md  TASKS.md  UBUNTU_DEPLOY.md  策略优化.md
migrations/: env.py  script.py.mako
scripts/: deploy_ubuntu.sh  deploy_ubuntu_lan.sh  install_systemd_service.sh  restore_strategy_snapshot.sh  run_paper_realtime.py  run_paper_status_web.py  run_strategy_backtest_batch.py  show_paper_runtime_events.py  start.sh  start_lan.sh  start_ubuntu.sh  stop.sh  sync_klines.py  validate_layered_btc_history.py
tests/: test_deploy_ports.py  test_deploy_script.py  test_packaging.py  test_paper_status_error_log_time.py  test_paper_status_timeline_policy.py  test_v0_1_contract.py  test_v0_1_database_and_binance.py  test_v0_1_indicator_golden.py  test_v0_1_repository.py  test_v0_2_pullback_strategy.py  test_v0_2_reversal_strategy.py  test_v0_2_signal_router.py  test_v0_3_backtest_archive.py  test_v0_3_backtest_engine.py  test_v0_4_alerts.py  test_v0_4_binance_stream.py  test_v0_4_paper_status.py  test_v0_4_paper_trading.py  test_v0_4_realtime_stream.py  test_v0_5_execution_state_machine.py  test_v0_5_kill_switch.py  test_v0_5_liquidation_guard.py  test_v0_5_order_plan.py  test_v0_5_position_sizing.py  (+30 more)
(+69 files in other folders)
