[project]
name = "crypto-quant-system"
version = "1.0.1"
description = "Binance USDT-M futures quant trading research system"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "psycopg[binary]>=3.2",
    "SQLAlchemy>=2.0",
    "alembic>=1.13",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["runtime*", "migrations*", "tests*"]
